Release (#16)
* Implementing Mercado Pago PIX by QR Code

* Implementing basic unit tests for mercado pix by Qr Code

* Implementing basic unit tests for mercado pix by Qr Code

* Replacing Gson to Jackson

* feat(Product[WIP]): Create CRUD for products

* feat(Product[WIP]): Create CRUD for products

* feat(products[WIP]): Create table

* feat(products[WIP]): Create table

* feat(produtos[WIP]): Documenta API de produtos

* feat(CRUP Product[WIP Tests]): Insere testes de integração

* Correcao: Corrige tipo dado boleano

* feat(Products[Refact]): Refatora conforme sugestões e correções

* Resolving conflicts

* Add CartsController/tests

Add CartsController/tests

Carts - partial implementation

Partial implementation

Fixing types

Adding tests

Adding tests

Adding tests

Adding tests

Adding tests

Add get cart

Add new item into the cart

Add new item into the cart

Add cart/customer association

Add cart/customer association

Add cart deletion

Add delete cart item

* Change quantity feature.Updating docker file

* Add customer(optional) when the cart is created

---------
