# src/main/resources/static/api.yml
@@ -131,7 +131,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CartItemRequest'
+              $ref: '#/components/schemas/CreateCartRequest'
       responses:
         201:
           description: Carrinho criado.
@@ -251,7 +251,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
 
-  /api/v1/carts/{cartId}/items/{productId}:
+  /api/v1/carts/{cartId}/items/{itemId}:
    patch:
      tags:
        - Carts
@@ -263,10 +263,10 @@ paths:
          description: Identificador único do carrinho (UUID)
          schema:
            type: string
-       - name: productId
+       - name: itemId
          in: path
          required: true
-         description: Identificador único do produto a ser removido
+         description: Identificador único do item a ser atualizado
          schema:
            type: string
      requestBody:
@@ -341,7 +341,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/IdentifyRequest'
+              $ref: '#/components/schemas/CartAssociateCustomerRequest'
       responses:
         '200':
           description: Carrinho atualizado com customerId
@@ -351,6 +351,12 @@ paths:
                 $ref: '#/components/schemas/CartResponse'
         '404':
           description: Carrinho não encontrado
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '409':
+          description: Conflito – carrinho já possui um customer associado
           content:
             application/json:
               schema:
@@ -438,6 +444,18 @@ components:
           type: number
           description: Subtotal em centavos (priceCents * quantity)
 
+    CreateCartRequest:
+      type: object
+      required:
+        - item
+      properties:
+        customerId:
+          type: string
+          description: Identificador do cliente(Opcional)
+          required: false
+        item:
+          $ref: '#/components/schemas/CartItemRequest'
+
     CartItemRequest:
       type: object
       required:
@@ -471,7 +489,7 @@ components:
         totalCents:
           type: integer
           description: Soma de todos os subtotalCents do carrinho
-    IdentifyRequest:
+    CartAssociateCustomerRequest:
       type: object
       required:
         - customerId
